--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -254,7 +254,7 @@
                         }
                         //$.fn.dataTable.moment('DD/MM/YYYY HH:MM');
                         //$('#datatable-buttons').DataTable();
-                        t.columns([0]).order('asc').draw();
+                        t.columns([3]).order('asc').draw();
                         // t.createdRow();
 
 
@@ -398,7 +398,7 @@
                         <!-- LOGO -->
                         <div class="pull-left">
                             <div class="text-center">
-                                <a href="index.html" class="logo"><span>בדרך להחלמה</span>&nbsp&nbsp&nbsp</a>
+                                <a href="manageRidePats.html" class="logo"><span>בדרך להחלמה</span>&nbsp&nbsp&nbsp</a>
                             </div>
                         </div>
                     </div>
