--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -199,7 +199,7 @@
 
                             if (userInDB) {
                                 swal({
-                                    title: "ברוך הבא",
+                                    title: "ברוכים הבאים",
                                     type: "success",
                                     timer: 1000,
                                     showConfirmButton: false
