--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -165,12 +165,12 @@
 
                        // date2 = date.toLocaleDateString();
                         date2 = date.getDate() + "/" + (date.getMonth()+1) + "/" + date.getUTCFullYear();
-                        
+
 
                         hours = date.getHours();
                         time = hours + ":" + minutes;
                         if (hours == "22" && minutes == "14") time = "אחה''צ"; //22:14 means afternoon
-                       
+
                         btnStr = "";
                         showBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' name='" + arr_rides[i].RidePatNum + "' title='צפייה'><i class='fa fa-wpforms'></i></button>";
                         editBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' name='" + arr_rides[i].RidePatNum + "' title='עריכה'><i class='ti-pencil'></i></button>";
@@ -188,16 +188,16 @@
                         {
                             if (date.getHours() < splitHour) //morning rides
                             {
-                                buildTables(tMorning);                               
+                                buildTables(tMorning);
                             }
                             else //afternoon rides
                             {
-                                buildTables(tAfternoon);                               
+                                buildTables(tAfternoon);
                             }
                         }
                         else //futrue rides
                         {
-                            buildTables(tFuture);                            
+                            buildTables(tFuture);
                         }
                     }
 
@@ -262,8 +262,8 @@
             }
             else {
                 for (j in arr_rides[i].Drivers) {
-                    if (arr_rides[i].Drivers[j].DriverType == "Primary") var primary = arr_rides[i].Drivers[j].DisplayName;
-                    else secondary = arr_rides[i].Drivers[j].DisplayName;
+                    if (arr_rides[i].Drivers[j].DriverType == "Primary") var primary = arr_rides[i].Drivers[j].DisplayName+" " + arr_rides[i].Drivers[j].CellPhone;
+                    else secondary = arr_rides[i].Drivers[j].DisplayName + " " + arr_rides[i].Drivers[j].CellPhone;
                 }
                 if (arr_rides[i].Drivers.length == 1) {
                     if (primary != undefined)
