--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -312,7 +312,7 @@
                                 <table id="datatable-buttons" class="table table-striped table-bordered">
                                     <thead>
                                         <tr>
-                                            <th>שם</th>
+                                            <th>החולה</th>
                                             <th>טלפון</th>
                                             <th>מחסום</th>
                                             <th>בית חולים</th>
