--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1042,12 +1042,6 @@
 
                     <ul>
 
-                        <!--<li>
-                            <a href="index.html" class="waves-effect waves-primary">
-                                <i class="md md-dashboard"></i><span> דף הבית </span>
-                            </a>
-                        </li>-->
-
                         <li>
                             <a href="viewVolunteer.html" class="waves-effect waves-primary">
                                 <i class="md md-person"></i><span> ניהול מתנדבים</span>
@@ -1068,6 +1062,11 @@
                         <li>
                             <a href="manageRidePats.html" class="waves-effect waves-primary">
                                 <i class="md md-today"></i><span> ניהול ההסעות שלי</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="waves-effect waves-primary" onclick="deleteCookie()">
+                                <i class="md md-remove-circle-outline"></i><span>התנתקות מהמערכת</span>
                             </a>
                         </li>
                     </ul>
