--- a/Road to Recovery/pages/escortedForm.html
+++ b/Road to Recovery/pages/escortedForm.html
@@ -392,14 +392,6 @@
                 <div id="sidebar-menu">
 
                     <ul>
-
-                        <
-                        <!--li>
-                            <a href="index.html" class="waves-effect waves-primary">
-                                <i class="md md-dashboard"></i><span> דף הבית </span>
-                            </a>
-                        </li>-->
-
                         <li>
                             <a href="viewVolunteer.html" class="waves-effect waves-primary">
                                 <i class="md md-today"></i><span> ניהול מתנדבים</span>
@@ -420,6 +412,11 @@
                         <li>
                             <a href="manageRidePats.html" class="waves-effect waves-primary">
                                 <i class="md md-today"></i><span> ניהול ההסעות שלי</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="waves-effect waves-primary" onclick="deleteCookie()">
+                                <i class="md md-remove-circle-outline"></i><span>התנתקות מהמערכת</span>
                             </a>
                         </li>
                     </ul>
